--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|images|styles|scripts|js|assets|robots\.txt)
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteCond  %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.reconocelo.com.mx/$1 [R,L]
