--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -1,3 +1,7 @@
 RewriteEngine on
 RewriteCond  %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://www.reconocelo.com.mx/$1 [R,L]
+RewriteCond $1 !^(index\.php|assets|images|css|js|robots\.txt|favicon\.ico)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ ./index.php?/$1 [L,QSA]
