--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,13 @@
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
-
-#RewriteEngine on
-#RewriteCond  %{SERVER_PORT} 80
-#RewriteRule ^(.*)$ http://35.236.41.75/reconocelo/$1 [R,L]
-#RewriteCond $1 !^(index\.php|assets|images|css|js|robots\.txt|favicon\.ico)
+#RewriteEngine On
+#RewriteBase /
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$./index.php?/$1 [L]
+#RewriteRule ^(.*)$ index.php/$1 [L]
+
+RewriteEngine on
+RewriteCond  %{SERVER_PORT} 80
+RewriteRule ^(.*)$ http://35.236.41.75/reconocelo/$1 [R,L]
+RewriteCond $1 !^(index\.php|assets|images|css|js|robots\.txt|favicon\.ico)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$./index.php?/$1 [L]
