--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,8 @@
-#RewriteEngine On
-#RewriteBase /
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php/$1 [L]
-
-RewriteEngine on
-#RewriteBase /
-RewriteCond  %{SERVER_PORT} 80
-#RewriteRule ^(.*)$ http://localhost/reconocelo/$1 [R,L]
-RewriteCond $1 !^(index\.php|assets|images|css|js|robots\.txt|favicon\.ico)
+<IfModule mod_rewrite.c>
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$./index.php?/$1 [L]
+RewriteRule ^(.*)$ index.php/$1 [L]
+</IfModule>
+
+
